# foresight-web

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  enforce-source.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
docs/: high-level-specs.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
